--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,9 @@
 </head>
     <link href="https://fonts.googleapis.com/css2?family=Cabin" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed" rel="stylesheet">
-  	<link rel="shortcut icon" type="image/x-icon" href="../static/photographs/favicon.ico" />
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani" rel="stylesheet">
+    <link rel="shortcut icon" type="image/x-icon" href="../static/photographs/favicon.ico" />
+    <!-- <link rel="stylesheet" href="styles.css"> -->
     <!-- <link rel="preload" as="image" href="/photographs/1.jpg">
     <link rel="preload" as="image" href="/photographs/2.jpg">
     <link rel="preload" as="image" href="/photographs/3.jpg">
